--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "postfinance",
-  "version": "0.0.0",
+  "name": "ngx-paginator",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test --watch=true --source-map=true --browsers=ChromeHeadless --code-coverage=true"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
